portal/static/less/gil.less
/* ... */
@media (min-width:992px) {
    .sprout-video-container {
        .embed-video {
            height: 99%
        }
    }
}

.button--video {
    position: absolute;
    left: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
    z-index: 2;
    width: 200px;
    max-width: 100%;
    top: 18%;
    height: 4.5em;
    font-size: .65em;
    border: 0;
    letter-spacing: 2px;
    transition: top 150ms ease-in
}

@media (min-width:399px) {
    .button--video {
        top: 25%
    }
}

@media (min-width:447px) {
    .button--video {
        top: 30%
    }
}

@media (min-width:500px) {
    .button--video {
        top: 32%
    }
}

@media (min-width:574px) {
    .button--video {
        top: 35%
    }
}

@media (min-width:672px) {
    .button--video {
        top: 37%
    }
}

@media (min-width:723px) {
    .button--video {
        width: 250px;
        padding: .5em;
        font-size: .85em;
        top: 38%;
        height: 3.5em
    }
}

@media (min-width:768px) {
    .button--video {
        top: 40%
    }
}

@media (min-width:992px) {
    .button--video {
        top: 41%
    }
}

.button--video__overlay {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    min-width: 100%;
    min-height: 100%;
    background-color: #FFF;
    opacity: .4;
    z-index: 1
}

.no-fouc {display: none;}
#tnthBottomNavWrapper { 
    background: #000; 
    display: block;
    font-size: 14px;
    line-height: 1.42857;
    color: #4A4A4A;
    width:100%;
    overflow: hidden;
}
#tnthBottomNavWrapper::before {
    content: " ";
    display: table;
}

.footer {
    padding: 46px 28px 12px;
    background: #000;
    a {
        color: #FFF;
        &:hover {
            text-decoration: underline;
            color: #FFF;
        }
    }
    .main-nav-list {
        display: flex;
        justify-content: center;
        flex-wrap: wrap;
        align-items: center;
        margin-bottom: 28px;
    }
    figure {
        margin: 0 8px 8px;
        display: inline-block
    }
    .nav-image {
        min-width: 25%;
        max-width: 100%;
        text-align: center;
        padding-top: 3.75%;
        padding-bottom: 3.75%;
    }
    .nav-list {
        padding-right: 0;
        padding-left: 0;
    }
    .nav-list__item {
        text-transform: capitalize;
        line-height: 2;
        padding-left: 12px;
        padding-right: 12px;
        display: block;
        text-align: center;
        &:hover {
            color: #FFF;
            text-decoration: underline;
        }
        &.heading {
            color: #777777;
            &:hover {
                color: #777777;
                text-decoration: none;
            }
        }
    }
    .hr {
        border-top: 1px solid #252525;
        margin-top: 12px;
        margin-bottom: 12px;
        width: 96.5%;
        margin-right: auto;
        margin-left: auto;
    }
}

@media (min-width: 992px) {
    .footer {
        .main-nav-list {
            justify-content: space-between;
            align-items: flex-start;
        }
        .main-nav-list {
            flex-wrap: nowrap;
        }
        .nav-list__item {
            text-align: left;
        }
    }
}
@media (min-width: 1200px) {
    .footer {
        .nav-list__item {
            padding-left: 24px;
            padding-right: 24px;
        }
    }
}

.footer__logo-area {
    padding-left: 24px;
    padding-right: 24px;
    margin-bottom: 20px;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    .nav-list-secondary__item {
        margin: 12px 12px 12px 0;
        display: inline-block;
        color: #FFF;
        a {
            color: inherit;
        }
    }
    .item {
        margin-bottom: 12px;
        &.links {
            width: 50%;
            max-width: 100%;
            .copyright {
                margin-top: 12px;
            }
        }
    }
}
@media(min-width: 619px) {
    .footer {
        .main-nav-list {
            margin-bottom: 40px;
        }
    }
    .footer__logo-area {
        align-items: flex-start;
        .item.links {
            width: 80%;
            padding-left: 8px;
            padding-right: 8px;
            .copyright {
                margin-top: 0;
            }
        }
    }
}

.nav-list {
    position: relative;
    float: left;
    min-height: 1em;
    padding-left: 7.5px;
    padding-right: 7.5px;
    width: 100%;
    margin: 8px 0 16px
}

.nav-list__item {
    font-size: 16px;
    display: inline-block;
    letter-spacing: 1.5px;
    text-transform: uppercase;
    margin: 8px 20px;
    i {
        color: #FFF;
        text-align: center;
        font-size: 2.75em;
        display: block;
        margin-top: 12px;
        margin-bottom: 16px;
    }
}

@media (min-width:768px) {
    .nav-list__item i {
        margin-top: 0
    }
}

.nav-list__item i:hover {
    text-decoration: none
}

@media (max-width:767px) {
    .nav-list__item {
        font-size: 16px;
        line-height: 1.5;
        display: block;
        margin: 0 0 24px;
    }
}

.nav-list__item a {
    color: #fff
}

.nav-list__item a.icon-box__button--disabled {
    opacity: .4
}

.nav-list__item a:hover {
    color: #FFF;
    text-decoration: underline;
}

.partner-grid {
    margin-left: -7.5px;
    margin-right: -7.5px;
    text-align: center;
    margin-top: 40px
}

.partner-grid:before,
.partner-grid:after {
    content: " ";
    display: table
}

.partner-grid:after {
    clear: both
}

.partner-grid__item {
    position: relative;
    float: left;
    min-height: 1px;
    padding-left: 7.5px;
    padding-right: 7.5px;
    width: 20%;
    min-height: 90px;
    margin-bottom: 15px
}

.partner-grid__item svg {
    max-width: 100%
}

@media (max-width:767px) {
    .partner-grid__item {
        width: 33.33333%
    }
}

.world-map {
    position: relative
}
/* ... */

